# OpenUtils

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt
src/EnvVarEditor/: CMakeLists.txt  eve_global.h  main.cpp  main2.cpp
src/comm/: CMakeLists.txt  comm_global.h  cvt.h  std_io_file_util.cpp  std_io_file_util.h  std_io_path_util.cpp  std_io_path_util.h  std_str_util.cpp  std_str_util.h  win_cls_logger.cpp  win_cls_logger.h  win_evar_util.cpp  win_evar_util.h  win_reg_util.cpp  win_reg_util.h  win_shell_util.cpp  win_shell_util.h
